--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     background-color: #3c415e;
 }
@@ -50,4 +51,9 @@ button {
 .btn-green {
     background: rgb(44, 209, 88);
     color: black;
+}
+
+.row {
+    display: flex;
+    justify-content: space-around;
 }
